testcases/compiler2015/Phase2/CompileError/lvalue3-5100379071-puyouer.c
/**
 * func return can't be lvalue
 */

int main() {
    main() = 1;
}

